@@ -1,5 +1,10 @@
 2007-02-06  Scott James Remnant  <scott@netsplit.com>
 
+	* init/event.c (event_read_state, event_write_state): Read and write
+	the arguments and environment of the event.
+	* init/tests/test_event.c (test_read_state, test_write_state): Make
+	sure arguments and environment are correctly serialised.
+
 	* init/cfgfile.c (cfg_stanza_console): Fix a leak of the console
 	argument in the case of duplicated options.
 	(cfg_stanza_env): Drop the counting now nih_str_array_addp does it;
